Update reservation form

--- a/contact-us.html
+++ b/contact-us.html
@@ -69,12 +69,12 @@
 						<div class="one_form">
 							<label for="telephone">Tel. nr.<span> *</span></label>
 							<br>
-							<input type="text" id="telephone" name="telephone" value="" required>
+							<input type="tel" id="telephone" name="telephone" value="" required>
 						</div>
 						<div class="one_form">
 							<label for="coupon">Kupono suma:<span> *</span></label>
 							<br>
-							<input type="number" id="coupon" name="coupon" value="" required>
+							<input type="text" id="coupon" name="coupon" value="" required>
 						</div>
 						<div class="one_form">
 							<label for="coupon">Procedūra:<span> *</span></label>
