Add owl_carousel to news section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 		<link rel="stylesheet" href="owlcarousel/dist/assets/owl.carousel.min.css">
 		<link rel="stylesheet" href="owlcarousel/dist/assets/owl.theme.default.min.css">
 		<link rel="stylesheet" href="assets/css/style.css">
-
 	</head>
 	<body> 
 		
@@ -60,7 +59,7 @@
 
 		<!-- 2 SECTION START-->
 		<section class="carousel">
-			<div class="owl-carousel owl-theme">
+			<div class="owl-carousel kar owl-theme">
 				<div class="special-container photo flexinam first">
 					<div class="content">
 						<h3>Sveiki atvykę į aušros spa namus!</h3>
@@ -167,22 +166,22 @@
 				<div class="intro">
 					<h5>Naujienos ir pasiūlymai</h5>
 				</div>
-				<div class="news-columns flexinam"> 
+				<div class="owl-carousel kar2 owl-theme">
 					<div class="one-news-column">
 						<div class="top-column">
 							<figure>
-								<img src="assets/images/sink-compressor.jpg">
+								<img src="assets/images/bowl-compressor.jpg">
 								<div class="top-right">
-									<a href="#nuveda i article">spa</a>
+									<a href="#nuveda i article">Wellness</a>
 								</div>
 							</figure>
 						</div>
 						<div class="bottom-column">
 							<header>
-								<h6>What is a Spa?</h6>
+								<h6>Custom Welness Getaways</h6>
 							</header>
 							<div class="date-published">
-								<h6 class="published">July 18, 2017</h6>
+								<h6 class="published">July 28, 2017</h6>
 							</div>
 							<div class="paragraph">
 								<p>Apparently we had reached a great height in the atmosphere, for the sky was...</p>
@@ -195,20 +194,20 @@
 					<div class="one-news-column">
 						<div class="top-column">
 							<figure>
-								<img src="assets/images/massage-compressor.jpg">
+								<img src="assets/images/citrus-compressor.jpg">
 								<!-- kaip padaryti, kad a padengtu visa foto? -->
 								<div class="top-right">
-									<a href="#nuveda i article">aromatherapy</a>
+									<a href="#nuveda i article">massage</a>
 								</div>
 							</figure>
 							 <!-- https://www.w3schools.com/howto/howto_css_image_text.asp -->
 						</div>
 						<div class="bottom-column">
 							<header>
-								<h6>Healing with Aromatherapy</h6>
+								<h6>Balinese Massage</h6>
 							</header>
 							<div class="date-published">
-								<h6 class="published">July 16, 2017</h6>
+								<h6 class="published">July 25, 2017</h6>
 							</div>
 							<div class="paragraph">
 								<p>Apparently we had reached a great height in the atmosphere, for the sky was...</p>
@@ -221,20 +220,20 @@
 					<div class="one-news-column">
 						<div class="top-column">
 							<figure>
-								<img src="assets/images/bali-compressor.jpg">
+								<img src="assets/images/bathtub-compressor.jpg">
 								<!-- kaip padaryti, kad a padengtu visa foto? -->
 								<div class="top-right">
-									<a href="#nuveda i article">spa breaks</a>
+									<a href="#nuveda i article">massage</a>
 								</div>
 							</figure>
 							 <!-- https://www.w3schools.com/howto/howto_css_image_text.asp -->
 						</div>
 						<div class="bottom-column">
 							<header>
-								<h6>Spa Breaks in Ireland</h6>
+								<h6>Deep Tissue Massage</h6>
 							</header>
 							<div class="date-published">
-								<h6 class="published">July 15, 2017</h6>
+								<h6 class="published">August 1, 2017</h6>
 							</div>
 							<div class="paragraph">
 								<p>Apparently we had reached a great height in the atmosphere, for the sky was...</p>
@@ -244,7 +243,7 @@
 							</footer>
 						</div>
 					</div>
-										<div class="one-news-column">
+					<div class="one-news-column">
 						<div class="top-column">
 							<figure>
 								<img src="assets/images/sink-compressor.jpg">
@@ -321,7 +320,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="three-dots flexinam">
+<!-- 				<div class="three-dots flexinam">
 					<div>
 						<i class="fas fa-circle"></i>
 					</div>
@@ -331,7 +330,7 @@
 					<div>
 						<i class="fas fa-circle"></i>
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</section>
 		<!-- 6 SECTION END: NEWS-->
@@ -384,7 +383,6 @@
 		<script src="assets/scripts/jquery.js"></script>
 		<script src="owlcarousel/dist/owl.carousel.min.js"></script>
 		<script src="assets/scripts/script.js"></script>
-		
 	</body>
 </html>
 
