Add back-to-top button
Changed JavaScript to JQuery

--- a/contact-us.html
+++ b/contact-us.html
@@ -11,6 +11,12 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+	<!-- START: button-to-top -->
+	<button onclick="topFunction()" class="myBtn" title="Go to top">
+		<i class="fas fa-angle-up"></i>
+	</button>
+	<!-- END: button-to-top -->
+
 	<!-- HEADER START-->
 	<header class="float-navigation"> <!-- zalias --> 
 		<div class="container flexinam">
