--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 		<link rel="stylesheet" href="owlcarousel/dist/assets/owl.theme.default.min.css">
 		<link rel="stylesheet" href="assets/css/style.css">
 	</head>
-	<body> 
-		
+	<body>
 		<!-- START: button-to-top -->
-		<button onclick="topFunction()" class="myBtn" title="Go to top">Top</button>
+		<button onclick="topFunction()" class="myBtn" title="Go to top">
+			<i class="fas fa-angle-up"></i>
+		</button>
 		<!-- END: button-to-top -->
 
 		<!-- HEADER START-->
-
 		<header class="float-navigation"> <!-- zalias --> 
 			<div class="container flexinam">
 
@@ -54,9 +54,7 @@
 				</nav>
 			</div>
 		</header>
-		
 		<!-- HEADER END --> 
-
 		<!-- 2 SECTION START-->
 		<section class="carousel">
 			<div class="owl-carousel kar owl-theme">
@@ -77,7 +75,7 @@
 			</div>
 		</section>
 		<!-- 2 SECTION END-->
-		
+
 		<!-- 3 SECTION START: for overlay-->
 		<section class="overlay">
 		</section>
