Add page navigation

--- a/index.html
+++ b/index.html
@@ -26,22 +26,23 @@
 			<div class="container flexinam">
 
 				<div class="logo">
-					<a href="# i pagrindini">
+					<a href="#">
 						<img src="assets/images/logo-spa-compressor.png" alt="Aušros spa namai">
 					</a>
 				</div>
 
 				<nav class="meniu flexinam">
 					<ul class="flexinam">
-						<li class="unique"><a href="#">Pradžia</a></li>
-						<li><a href="#">Apie mus</a></li>
-						<li><a href="#">Naujienos</a></li>
-						<li><a href="#">Paslaugos</a></li>
-						<li><a href="#">Dovanų kuponai</a></li>
-						<li><a href="#">Kontaktai</a></li>
+						<li><a href="#" class="keep-color">Pradžia</a></li>
+						<li><a href="#us" class="keep-color">Apie mus</a></li>
+						<li><a href="#our_news" class="keep-color">Naujienos</a></li>
+						<li><a href="#our_services" class="keep-color">Paslaugos</a></li>
+						<li><a href="#coupons" class="keep-color">Dovanų kuponai</a></li>
+						<li><a href="#contact_us" class="keep-color">Kontaktai</a></li>
 					</ul>
 					<ul class="lang">
 						<!-- kaip cia padaryti, kad issoktu EN?? -->
+						<!-- https://www.w3schools.com/howto/howto_js_dropdown.asp -->
 						<li>
 							<a href="#LT">
 								<img src="assets/images/lt.png">
@@ -82,7 +83,7 @@
 		<!-- 3 SECTION START: for overlay-->
 
 		<!-- 4 SECTION START: ABOUT US-->
-		<section class="about-us">
+		<section id="us" class="about-us">
 			<div class="container flexinam">
 				<div class="content-about-us">
 					<h1>Sveiki atvykę į aušros spa namus</h1>
@@ -92,7 +93,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="intro-to-service">
+		<section id="our_services" class="intro-to-service">
 			<div class="container flexinam">
 				<div class="antraste">
 					<h4>Experience an extensive menu of both modern and timeless treatments:</h4>
@@ -144,10 +145,10 @@
 				</div>
 			</div>
 		</section>
-		<!-- 4 SECTION END-->
+		<!-- 4 SECTION END: SERVICES-->
 
 		<!-- 5 SECTION START: VOUCHERS-->
-		<section class="voucher">
+		<section id="coupons" class="voucher">
 			<div class="container flexinam">
 				<div class="voucher-content">
 					<h3>Aušros Spa namų dovanų kuponai</h3>
@@ -159,7 +160,7 @@
 		<!-- 5 SECTION END: VOUCHERS-->
 
 		<!-- 6 SECTION START: NEWS-->
-		<section class="news">
+		<section id="our_news" class="news">
 			<div class="container">
 				<div class="intro">
 					<h5>Naujienos ir pasiūlymai</h5>
@@ -334,7 +335,7 @@
 		<!-- 6 SECTION END: NEWS-->
 
 		<!-- 7 SECTION START: footer-->
-		<footer class="end-footer">
+		<footer id="contact_us" class="end-footer">
 			<div class="container">
 				<div class="footer-content">
 					<div class="logo2">
