--- a/contact-us.html
+++ b/contact-us.html
@@ -8,6 +8,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i&amp;subset=latin-ext" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Marcellus&amp;subset=latin-ext" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i&amp;subset=latin-ext" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -27,12 +28,12 @@
 			</div>
 			<nav class="meniu flexinam">
 				<ul class="flexinam">
-					<li class="unique"><a href="#">Pradžia</a></li>
-					<li><a href="#">Apie mus</a></li>
-					<li><a href="#">Naujienos</a></li>
-					<li><a href="#">Paslaugos</a></li>
-					<li><a href="#">Dovanų kuponai</a></li>
-					<li><a href="#">Kontaktai</a></li>
+					<li><a href="#" class="keep-color">Pradžia</a></li>
+					<li><a href="#" class="keep-color">Apie mus</a></li>
+					<li><a href="#" class="keep-color">Naujienos</a></li>
+					<li><a href="#" class="keep-color">Paslaugos</a></li>
+					<li><a href="#" class="keep-color">Dovanų kuponai</a></li>
+					<li><a href="#" class="keep-color">Kontaktai</a></li>
 				</ul>
 				<ul class="lang">
 					<!-- kaip cia padaryti, kad issoktu EN?? -->
