Add responsive design

--- a/contact-us.html
+++ b/contact-us.html
@@ -19,16 +19,16 @@
 	<!-- END: button-to-top -->
 
 	<!-- HEADER START-->
-	<header class="float-navigation"> <!-- zalias --> 
+	<header class="float-navigation">
 		<div class="container flexinam">
 			<div class="logo">
-				<a href="# i pagrindini">
+				<a href="index.html">
 					<img src="assets/images/logo-spa-compressor.png" alt="Aušros spa namai">
 				</a>
 			</div>
 			<nav class="meniu flexinam">
 				<ul class="flexinam">
-					<li><a href="#" class="keep-color">Pradžia</a></li>
+					<li><a href="index.html" class="keep-color">Pradžia</a></li>
 					<li><a href="#" class="keep-color">Apie mus</a></li>
 					<li><a href="#" class="keep-color">Naujienos</a></li>
 					<li><a href="#" class="keep-color">Paslaugos</a></li>
@@ -36,7 +36,6 @@
 					<li><a href="#" class="keep-color">Kontaktai</a></li>
 				</ul>
 				<ul class="lang">
-					<!-- kaip cia padaryti, kad issoktu EN?? -->
 					<li>
 						<a href="#LT">
 							<img src="assets/images/lt.png">
