Update responsive design

--- a/index.html
+++ b/index.html
@@ -29,15 +29,17 @@
 						<img src="assets/images/logo-spa-compressor.png" alt="Aušros spa namai">
 					</a>
 				</div>
-				<nav class="meniu flexinam">
-					<ul class="flexinam topnav" id="myTopnav">
+				<nav id="myTopnav" class="meniu flexinam">
+					<div>
+						<a href="javascript:void(0);" class="icon_burger"><i class="fa fa-bars"></i></a>
+					</div>
+					<ul class="flexinam topnav">
 						<li><a href="#" class="keep-color">Pradžia</a></li>
 						<li><a href="#us" class="keep-color">Apie mus</a></li>
 						<li><a href="#our_news" class="keep-color">Naujienos</a></li>
 						<li><a href="#our_services" class="keep-color">Paslaugos</a></li>
 						<li><a href="#coupons" class="keep-color">Dovanų kuponai</a></li>
 						<li><a href="#contact_us" class="keep-color">Kontaktai</a></li>
-						<li><a href="javascript:void(0);" class="icon_burger" onclick="myFunction()"><i class="fa fa-bars"></i></a></li>
 					</ul>
 				</nav>
 			</div>
