--- a/contact-us.html
+++ b/contact-us.html
@@ -26,25 +26,18 @@
 					<img src="assets/images/logo-spa-compressor.png" alt="Aušros spa namai">
 				</a>
 			</div>
-			<nav class="meniu flexinam">
-				<ul class="flexinam">
-					<li><a href="index.html" class="keep-color">Pradžia</a></li>
-					<li><a href="#" class="keep-color">Apie mus</a></li>
-					<li><a href="#" class="keep-color">Naujienos</a></li>
-					<li><a href="#" class="keep-color">Paslaugos</a></li>
-					<li><a href="#" class="keep-color">Dovanų kuponai</a></li>
-					<li><a href="#" class="keep-color">Kontaktai</a></li>
-				</ul>
-				<ul class="lang">
-					<li>
-						<a href="#LT">
-							<img src="assets/images/lt.png">
-						</a>
-					</li>
-				</ul>
-				<div class="search">
-					<a href="#search"><span class="icon-search1"></span></a>
+			<nav id="myTopnav" class="meniu flexinam">
+				<div>
+					<a href="javascript:void(0);" class="icon_burger"><i class="fa fa-bars"></i></a>
 				</div>
+				<ul class="flexinam topnav">
+					<li><a href="#" class="keep-color">Pradžia</a></li>
+					<li><a href="#us" class="keep-color">Apie mus</a></li>
+					<li><a href="#our_news" class="keep-color">Naujienos</a></li>
+					<li><a href="#our_services" class="keep-color">Paslaugos</a></li>
+					<li><a href="#coupons" class="keep-color">Dovanų kuponai</a></li>
+					<li><a href="#contact_us" class="keep-color">Kontaktai</a></li>
+				</ul>				
 			</nav>
 		</div>
 	</header>
